Include .vscode in gitnore and make several change that almost let it run good. It shows a warning of High temperature

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ nbproject/Package-default.bash
 nbproject/private/
 nbproject/Makefile-default.mk
 /labview_logger/builds/logger.exe/1abvi3w/vi.lib/
+.vscode/
